<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">urbandapp</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="rol">Rol</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="country">Country</string>
    <string name="jazz">Jazz</string>
    <string name="title_activity_music">MusicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="match">MATCH</string>
    <string name="find_users">FIND USERS</string>
    <string name="mapa">MAPA</string>
    <string name="registrarse">Registrarse</string>
    <string name="textView_add_ins_1">Selecciona la familia a la cual pertence el instrumento que quieres añadir</string>
    <string name="familia_de_cuerda">Familia de cuerda</string>
    <string name="familia_de_percussion">Familia de Percussion</string>
    <string name="percusi_n">Percusión</string>
    <string name="cuerda">Cuerda</string>
    <string name="familia_de_vento">Familia de Vento</string>
    <string name="viento">Viento</string>
    <string name="familia_otros_instruments">Familia otros instruments</string>
    <string name="otros_ins">Otros</string>
    <string name="instrumento">Instrumento</string>
    <string name="indica_tu_experi_ncia_con_el_instrumento">Indica tu experiéncia con el instrumento</string>
    <string name="genero">Genero</string>
    <string name="icono_delete_recyclerview">Icono_delete_RecyclerView</string>
    <string name="icon_recyclerview_musical_generes">Icon RecyclerView Musical Generes</string>
    <string name="icon_instrument_recyclerview">Icon Instrument RecyclerView</string>
    <string name="rol_de_usuario_defaultactivity">Rol de usuario DefaultActivity</string>
    <string name="usrname_defaultAct">usrname</string>
    <string name="profile">PROFILE</string>
    <string name="logo_app">logo_app</string>
    <string name="desc_user">xcbznnxcvb</string>
    <string name="naci_el_d_a">Nació el día</string>
    <string name="descripci_n">Descripción</string>
    <string name="instrumentos_que_s_tocar">Instrumentos que sé tocar</string>
    <string name="mis_g_neros_musicales_favoritos">Mis géneros musicales favoritos</string>
    <string name="icono_sexo_per_fil">Icono sexo per fil</string>
    <string name="rol_usuario_perfil">Rol Usuario perfil</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="experi_ncia">Experiéncia</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="confirmar">Confirmar</string>
    <string name="musicalnote">musicalnote</string>
    <string name="desuscribirse">Desuscribirse</string>
    <string name="subscribirse">Subscribirse</string>
    <string name="desc_from_api">TextView</string>
    <string name="veo_que_es_la_primera_vez_que_entras_en_urband">Veo que es la primera vez que entras en Urband.</string>
    <string name="configura_tu_perfil_para_que_otros_usuarios_puedan_conocerte">Configura tu perfil para que otros usuarios puedan conocerte!</string>
    <string name="en_primer_lugar_escoge_un_nombre_para_poder_ser_identificado_m_s_facilmente">En primer lugar, escoge un nombre para poder ser identificado más facilmente</string>
    <string name="username_dialog">musico455</string>
    <string name="seleccionar_filtros">Seleccionar filtros</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="felicidades">¡ Felicidades !</string>
    <string name="has_hecho_match_con_este_usuario">Has hecho match con este usuario</string>
    <string name="su_experi_ncia">Su experiéncia</string>
    <string name="rol_user">Rol user</string>
    <string name="rol_vand">Rol VAND</string>
    <string name="rol_sponsor">Rol Sponsor</string>
    <string name="selecciona_tu_rol">Selecciona tu rol</string>
    <string name="m_sico">Músico</string>
    <string name="banda">Banda</string>
    <string name="patrocinador">Patrocinador</string>
    <string name="introduce_tu_nombre_y_primer_apellido">Introduce tu nombre y primer apellido</string>
    <string name="test_name">Juan</string>
    <string name="test_surname">González</string>
    <string name="pulsa_para_seleccionar_tu_fecha_de_nacimiento">Pulsa para seleccionar tu fecha de nacimiento</string>
    <string name="test_date">11/09/2020</string>
    <string name="selecciona_tu_g_nero">Selecciona tu género</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="introduce_la_descripci_n">Introduce la descripción</string>
    <string name="test_desc">Name</string>
    <string name="indica_tu_exp_riencia_general_con_la_m_sica">Indica tu expériencia general con la música</string>
    <string name="ind_canos_tus_talentos_en_el_mundo_de_la_musica">Indícanos tus talentos en el mundo de la musica</string>
    <string name="ind_canos_tus_prefer_ncias_y_tus_gustos_m_sicales">Indícanos tus preferéncias y tus gustos músicales</string>
    <string name="profile_icon_filters">profile icon filters</string>
    <string name="userame_filters">TextView</string>
    <string name="textview">TextView</string>
    <string name="selecciona_los_filtros_que_consideres_necesarios" tools:ignore="Typos">Selecciona los filtros que consideres necesarios.</string>
    <string name="g_nero_musical">Género Musical</string>
    <string name="filtrar">Filtrar</string>
    <string name="filter_action">Filter Action</string>
    <string name="repetir_password">Repetir Contraseña</string>

    <!-- EULA: Terms and conditions -->
    <string name="agreement_terms_and_conditions">Check here to indicate that you have read and
        agree to the terms of the service</string>
    <string name="accept">Accept</string>
    <string name="eula_string"> <![CDATA[
        <h2>End-User License Agreement (EULA) of <span class="app_name">DAM-TIPS</span></h2>

<p>This End-User License Agreement ("EULA") is a legal agreement between you and <span class="company_name">MyCompany</span></p>

<p>This EULA agreement governs your acquisition and use of our <span class="app_name">DAM-TIPS</span> software ("Software") directly from <span class="company_name">MyCompany</span> or indirectly through a <span class="company_name">MyCompany</span> authorized reseller or distributor (a "Reseller").</p>

<p>Please read this EULA agreement carefully before completing the installation process and using the <span class="app_name">DAM-TIPS</span> software. It provides a license to use the <span class="app_name">DAM-TIPS</span> software and contains warranty information and liability disclaimers.</p>

<p>If you register for a free trial of the <span class="app_name">DAM-TIPS</span> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <span class="app_name">DAM-TIPS</span> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>

<p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>

<p>This EULA agreement shall apply only to the Software supplied by <span class="company_name">MyCompany</span> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <span class="company_name">MyCompany</span> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by <a href="https://www.eulatemplate.com">EULA Template</a> for <span class="app_name">DAM-TIPS</span>.

<h3>License Grant</h3>

<p><span class="company_name">MyCompany</span> hereby grants you a personal, non-transferable, non-exclusive licence to use the <span class="app_name">DAM-TIPS</span> software on your devices in accordance with the terms of this EULA agreement.</p>

<p>You are permitted to load the <span class="app_name">DAM-TIPS</span> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <span class="app_name">DAM-TIPS</span> software.</p>

<p>You are not permitted to:</p>

<ul>
<li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
<li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
<li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
<li>Use the Software in any way which breaches any applicable local, national or international law</li>
<li>use the Software for any purpose that <span class="company_name">MyCompany</span> considers is a breach of this EULA agreement</li>
</ul>

<h3>Intellectual Property and Ownership</h3>

<p><span class="company_name">MyCompany</span> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <span class="company_name">MyCompany</span>.</p>

<p><span class="company_name">MyCompany</span> reserves the right to grant licences to use the Software to third parties.</p>

<h3>Termination</h3>

<p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">MyCompany</span>.</p>

<p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>

<h3>Governing Law</h3>

<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">es</span>.</p>
        ]]> </string>
</resources>
