<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooserActivity">

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:layout_marginTop="116dp"
        android:background="@color/design_default_color_primary_dark"
        android:fontFamily="@font/nova_cut"
        android:text="@string/login"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urband_logo" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@color/design_default_color_primary_dark"
        android:fontFamily="@font/nova_cut"
        android:text="@string/register"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/urband_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_urband" />

</androidx.constraintlayout.widget.ConstraintLayout>