<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_view_pho2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nova_square"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/design_default_color_primary_dark"
        android:textColorHighlight="@color/design_default_color_primary_variant"
        android:textColorHint="@color/design_default_color_secondary"
        android:textColorLink="@color/design_default_color_secondary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="484dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-11dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="157dp" />

    <ImageView
        android:id="@+id/urband_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_urband" />

    <TextView
        android:id="@+id/text_view_pho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/nova_oval"
        android:text="@string/tel_fono"
        android:textColor="@color/design_default_color_primary_dark"
        android:textColorHighlight="@color/design_default_color_primary_variant"
        android:textColorHint="@color/design_default_color_secondary"
        android:textColorLink="@color/design_default_color_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tes_view_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nova_oval"
        android:text="@string/contrase_a"
        android:textColor="@color/design_default_color_primary_dark"
        android:textColorHighlight="@color/design_default_color_primary_variant"
        android:textColorHint="@color/design_default_color_secondary"
        android:textColorLink="@color/design_default_color_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

    <TextView
        android:id="@+id/tes_view_rol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nova_oval"
        android:text="@string/rol"
        android:textColor="@color/design_default_color_primary_dark"
        android:textColorHighlight="@color/design_default_color_primary_variant"
        android:textColorHint="@color/design_default_color_secondary"
        android:textColorLink="@color/design_default_color_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_view_pho" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/nova_script"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tes_view_pass" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:background="@color/design_default_color_primary_dark"
        android:fontFamily="@font/nova_cut"
        android:text="Login"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <RadioGroup
        android:id="@+id/rol"
        android:layout_width="272dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent">


        <RadioButton
            android:id="@+id/usuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Usuari"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton

            android:id="@+id/banda"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="184dp"
            android:text="Banda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/patrocinador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patrocinador"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="84dp"
            android:layout_height="30dp"
            android:text="btn_display" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>